--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Understanding TypeScript</title>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHvYxV7g6i-D-71cRbt15xJe0YkgOYl1M"
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY_REMOVED"
       async
       defer
     ></script>
